projet/kubernetes/YAML/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  labels:
    app: api
spec:
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 5000         
      targetPort: 5000   
  type: ClusterIP
