projet/kubernetes/YAML/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels:
    app: front
spec:
  selector:
    app: front # Doit correspondre aux labels du ReplicaSet/pods
  ports:
    - name: http
      protocol: TCP
      port: 80         # Port accessible via le service
      targetPort: 80   # Port exposé par le conteneur
  type: ClusterIP      # Accessible uniquement depuis le cluster
