projet/kubernetes/YAML/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  labels:
    app: redis
spec:
  selector:
    app: redis # Correspond aux labels du ReplicaSet/pods
  ports:
    - name: redis
      protocol: TCP
      port: 6379         # Port accessible via le service
      targetPort: 6379   # Port exposé par le conteneur
  type: ClusterIP        # Service interne au cluster
