projet/kubernetes/YAML/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-rule
spec:
  rules:
  - host: "calculatrice-yohann-mahaut-polytech-dijon.kiowy.net"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: svc-front
            port:
              number: 80
